k8s/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:v0.6.26
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "5Gi"
        ports:
        - containerPort: 8080
          name: frontend
        volumeMounts:
        - name: open-webui
          mountPath: /app/backend/data
      volumes:
      - name: open-webui
        persistentVolumeClaim:
          claimName: open-webui
