k8s/openwebui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`open-webui.localhost`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
