k8s/openwebui/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:v0.6.15
        ports:
        - containerPort: 8080
          name: frontend
        volumeMounts:
        - name: open-webui
          mountPath: /app/backend/data
      volumes:
      - name: open-webui
        persistentVolumeClaim:
          claimName: open-webui
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  type: LoadBalancer
  selector:
    app: open-webui
  ports:
    - name: frontend
      port: 80
      targetPort: frontend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: open-webui
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui
            port:
              name: frontend
